--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 		<p>
 		If you finish before the timer stops click the 'All Done' button at the end. Then you will see your score.</p>
 		<br>
-	<p>Good Luck!</p>
+		<h2>Good Luck!</h2>
 
 	</div>
 
@@ -42,133 +42,136 @@
 </div>
  
  <div class="questions">
-<div>
-	<p class="question">1. Which species of tree was named the state tree in 1963?</p>        
 
-	<ul class="answers">            
-	<input type="radio" name="q1" value="a" id="q1a"	><label for="q1a">Oak</label><br/>          
-	<input type="radio" name="q1" value="b" id="q1b"><label for="q1b">Pine</label><br/>            
-	<input type="radio" name="q1" value="c" id="q1c"><label for="q1c">Maple</label><br/>            
-	<input type="radio" name="q1" value="d" id="q1d"><label for="q1d">Hickory</label><br/>       
-	</ul>        
-</div>
+ 	<div>
+		<p class="question">1. Which species of tree was named the state tree in 1963?</p>        
 
-<div>
-<p class="question">2. Which fruit was named the official fruit in 2001?</p>        
+		<ul class="answers">            
+			<input type="radio" name="q1" value="a" id="q1a"	><label for="q1a">Oak</label><br/>          
+			<input type="radio" name="q1" value="b" id="q1b"><label for="q1b">Pine</label><br/>            
+			<input type="radio" name="q1" value="c" id="q1c"><label for="q1c">Maple</label><br/>            
+			<input type="radio" name="q1" value="d" id="q1d"><label for="q1d">Hickory</label><br/>       
+		</ul>        
+	</div>
 
-<ul class="answers">            
-<input type="radio" name="q2" value="a" id="q2a"><label for="q2a">Scuppernong grape</label><br/>           
-<input type="radio" name="q2" value="b" id="q2b"><label for="q2b">Peach</label><br/>            
-<input type="radio" name="q2" value="c" id="q2c"><label for="q2c">Apple</label><br/>           
-<input type="radio" name="q2" value="d" id="q2d"><label for="q2d">Muscadine grape</label><br/>       
-</ul>    
-</div>
+	<div>
+		<p class="question">2. Which fruit was named the official fruit in 2001?</p>        
 
-<div>    
+		<ul class="answers">            
+			<input type="radio" name="q2" value="a" id="q2a"><label for="q2a">Scuppernong grape</label><br/>           
+			<input type="radio" name="q2" value="b" id="q2b"><label for="q2b">Peach</label><br/>            
+			<input type="radio" name="q2" value="c" id="q2c"><label for="q2c">Apple</label><br/>           
+			<input type="radio" name="q2" value="d" id="q2d"><label for="q2d">Muscadine grape</label><br/>       
+		</ul>    
+	</div>
 
-<p class="question">3. What is the official bird of our fair state?</p>        
+	<div>    
 
-<ul class="answers">            
-<input type="radio" name="q3" value="a" id="q3a"><label for="q3a">Mockingbird</label><br/>            
-<input type="radio" name="q3" value="b" id="q3b"><label for="q3b">American Robin</label><br/>            
-<input type="radio" name="q3" value="c" id="q3c"><label for="q3c">Eastern Bluebird</label><br/>           
-<input type="radio" name="q3" value="d" id="q3d"><label for="q3d">Cardinal</label><br/>       
-</ul>  
-</div> 
+		<p class="question">3. What is the official bird of our fair state?</p>        
 
-<div>     
+		<ul class="answers">            
+			<input type="radio" name="q3" value="a" id="q3a"><label for="q3a">Mockingbird</label><br/>            
+			<input type="radio" name="q3" value="b" id="q3b"><label for="q3b">American Robin</label><br/>            
+			<input type="radio" name="q3" value="c" id="q3c"><label for="q3c">Eastern Bluebird</label><br/>           
+			<input type="radio" name="q3" value="d" id="q3d"><label for="q3d">Cardinal</label><br/>       
+		</ul>  
+	</div> 
 
-<p class="question">4. Which two dances have been named the official dances, one popular and one folk?</p>        
+	<div>     
 
-<ul class="answers">           
-<input type="radio" name="q4" value="a" id="q4a"><label for="q4a">theTwist and the Shag</label><br/>            
-<input type="radio" name="q4" value="b" id="q4b"><label for="q4b">Virginia Reel and Clogging</label><br/>            
-<input type="radio" name="q4" value="c" id="q4c"><label for="q4c">Clogging and the Shag</label><br/>            
-<input type="radio" name="q4" value="d" id="q4d"><label for="q4d">Contra and the Twist</label><br/>        
-</ul> 
+		<p class="question">4. Which two dances have been named the official dances, one popular and one folk?</p>        
 
-</div>       
+		<ul class="answers">           
+			<input type="radio" name="q4" value="a" id="q4a"><label for="q4a">theTwist and the Shag</label><br/>            
+			<input type="radio" name="q4" value="b" id="q4b"><label for="q4b">Virginia Reel and Clogging</label><br/>            
+			<input type="radio" name="q4" value="c" id="q4c"><label for="q4c">Clogging and the Shag</label><br/>            
+			<input type="radio" name="q4" value="d" id="q4d"><label for="q4d">Contra and the Twist</label><br/>        
+		</ul> 
 
-<div>
-<p class="question">5. Which carniverous plant was named the state representative?</p>        
+	</div>       
 
-<ul class="answers">            
-<input type="radio" name="q5" value="a" id="q5a"><label for="q5a">Sundew</label><br/>            
-<input type="radio" name="q5" value="b" id="q5b"><label for="q5b">Venus Flytrap</label><br/>            
-<input type="radio" name="q5" value="c" id="q5c"><label for="q5c">Pitcher Plant</label><br/>           
-<input type="radio" name="q5" value="d" id="q5d"><label for="q5d">Purple Bladderwort</label><br/>        
-</ul> 
-</div>       
+	<div>
+		<p class="question">5. Which carniverous plant was named the state representative?</p>        
 
-<div>
-<p class="question">6. What is the official mineral of North Carolina?</p>        
+		<ul class="answers">            
+			<input type="radio" name="q5" value="a" id="q5a"><label for="q5a">Sundew</label><br/>            
+			<input type="radio" name="q5" value="b" id="q5b"><label for="q5b">Venus Flytrap</label><br/>            
+			<input type="radio" name="q5" value="c" id="q5c"><label for="q5c">Pitcher Plant</label><br/>           
+			<input type="radio" name="q5" value="d" id="q5d"><label for="q5d">Purple Bladderwort</label><br/>        
+		</ul> 
+	</div>       
 
-<ul class="answers">            
-<input type="radio" name="q6" value="a" id="q6a"><label for="q6a">Gold</label><br/>            
-<input type="radio" name="q6" value="b" id="q6b"><label for="q6b">Iron</label><br/>            
-<input type="radio" name="q6" value="c" id="q6c"><label for="q6c">Rock Salt</label><br/>            
-<input type="radio" name="q6" value="d" id="q6d"><label for="q6d">Silver</label><br/>        
-</ul> 
-</div>      
+	<div>
+		<p class="question">6. What is the official mineral of North Carolina?</p>        
 
-<div>
-<p class="question">7. What are the two official colors of North Carolina?</p>        
+		<ul class="answers">            
+			<input type="radio" name="q6" value="a" id="q6a"><label for="q6a">Gold</label><br/>            
+			<input type="radio" name="q6" value="b" id="q6b"><label for="q6b">Iron</label><br/>            
+			<input type="radio" name="q6" value="c" id="q6c"><label for="q6c">Rock Salt</label><br/>            
+			<input type="radio" name="q6" value="d" id="q6d"><label for="q6d">Silver</label><br/>        
+		</ul> 
+	</div>      
 
-<ul class="answers">            
-<input type="radio" name="q7" value="a" id="q7a"><label for="q7a">Red and White</label><br/>            
-<input type="radio" name="q7" value="b" id="q7b"><label for="q7b">White and Blue</label><br/>            
-<input type="radio" name="q7" value="c" id="q7c"><label for="q7c">Blue and Red</label><br/>            
-<input type="radio" name="q7" value="d" id="q7d"><label for="q7d">Blue and Yellow</label><br/>        
-</ul> 
-</div> 
+	<div>
+		<p class="question">7. What are the two official colors of North Carolina?</p>        
 
-<div>
-<p class="question">8. Which type of boat was named the official historic boat?</p>        
+		<ul class="answers">            
+			<input type="radio" name="q7" value="a" id="q7a"><label for="q7a">Red and White</label><br/>            
+			<input type="radio" name="q7" value="b" id="q7b"><label for="q7b">White and Blue</label><br/>            
+			<input type="radio" name="q7" value="c" id="q7c"><label for="q7c">Blue and Red</label><br/>            
+			<input type="radio" name="q7" value="d" id="q7d"><label for="q7d">Blue and Yellow</label><br/>        
+		</ul> 
+	</div> 
 
-<ul class="answers">            
-<input type="radio" name="q8" value="a" id="q8a"><label for="q8a">Dory</label><br/>            
-<input type="radio" name="q8" value="b" id="q8b"><label for="q8b">Shad boat</label><br/>            
-<input type="radio" name="q8" value="c" id="q8c"><label for="q8c">Yawl</label><br/>            
-<input type="radio" name="q8" value="d" id="q8d"><label for="q8d">Row boat</label><br/>       
-</ul>    
-</div>
+	<div>
+		<p class="question">8. Which type of boat was named the official historic boat?</p>        
 
-<div>  
-<p class="question">9. What is the state flower of North Carolina?</p>        
+		<ul class="answers">            
+			<input type="radio" name="q8" value="a" id="q8a"><label for="q8a">Dory</label><br/>            
+			<input type="radio" name="q8" value="b" id="q8b"><label for="q8b">Shad boat</label><br/>            
+			<input type="radio" name="q8" value="c" id="q8c"><label for="q8c">Yawl</label><br/>            
+			<input type="radio" name="q8" value="d" id="q8d"><label for="q8d">Row boat</label><br/>       
+		</ul>    
+	</div>
 
-<ul class="answers">            
-<input type="radio" name="q9" value="a" id="q9a"><label for="q9a">Mountain Laurel</label><br/>       
-<input type="radio" name="q9" value="b" id="q9b"><label for="q9b">Southern Magnolia</label><br/>            
-<input type="radio" name="q9" value="c" id="q9c"><label for="q9c">Redbud</label><br/>            
-<input type="radio" name="q9" value="d" id="q9d"><label for="q9d">Flowering Dogwood</label><br/>     </ul>  
-</div>  
+	<div>  
+		<p class="question">9. What is the state flower of North Carolina?</p>        
 
-<div>   
-<p class="question">10. What is the official dog breed?</p>        
+		<ul class="answers">            
+			<input type="radio" name="q9" value="a" id="q9a"><label for="q9a">Mountain Laurel</label><br/>       
+			<input type="radio" name="q9" value="b" id="q9b"><label for="q9b">Southern Magnolia</label><br/>            
+			<input type="radio" name="q9" value="c" id="q9c"><label for="q9c">Redbud</label><br/>            
+			<input type="radio" name="q9" value="d" id="q9d"><label for="q9d">Flowering Dogwood</label><br/>     
+		</ul>  
+	</div>  
 
-<ul class="answers">           
-<input type="radio" name="q10" value="a" id="q10a"><label for="q10a">Plott Hound</label><br/>            
-<input type="radio" name="q10" value="b" id="q10b"><label for="q10b">Treeing Walker Coonhound</label><br/>            
-<input type="radio" name="q10" value="c" id="q10c"><label for="q10c">Blue Tick Coonound</label><br/>            
-<input type="radio" name="q10" value="d" id="q10d"><label for="q10d">Bloodhound</label><br/>        
-</ul> 
-</div>       
+	<div>   
+		<p class="question">10. What is the official dog breed?</p>        
+
+		<ul class="answers">           
+			<input type="radio" name="q10" value="a" id="q10a"><label for="q10a">Plott Hound</label><br/>            
+			<input type="radio" name="q10" value="b" id="q10b"><label for="q10b">Treeing Walker Coonhound</label><br/>            
+			<input type="radio" name="q10" value="c" id="q10c"><label for="q10c">Blue Tick Coonhound</label><br/>            
+			<input type="radio" name="q10" value="d" id="q10d"><label for="q10d">Bloodhound</label><br/>        
+		</ul> 
+	</div>  
+	</div>     
 
 <br/>
-<div id="results">
-	<h2>Show me the answers!</h2>
-<button type="button">Score</button>
-</div>            
+	<div id="results">
+		<h2>Show me the answers!</h2>
+			<button type="button">Score</button>
+	</div>            
        
-</div>                
+	</div>                
 
 
-<script src="assets/javascript/app.js"></script>
-	<footer>
-		<div class="container">
+		<script src="assets/javascript/app.js"></script>
+		<footer>
+			<div class="container">
 			&copy; Copyright 2016 Your Name
-		</div>
-	</footer>
+			</div>
+		</footer>
 
 </body>
 </html>
